Fixed hero image to not distort and the image itself to not be so big. Changed company name

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ header h1 {
 
 img {
   width: 90%;
-  max-height: 50vh;
+  max-height: auto;
 }
 
 #logohead {
