--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -35,7 +35,7 @@ header {
 
 img {
   width: 90%;
-  max-height: 50vh;
+  max-height: auto;
 }
 
 #logohead {
